--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@headlessui/react": "^1.7.17",
 		"@heroicons/react": "^2.0.18",
 		"autoprefixer": "10.4.15",
+		"firebase": "^10.4.0",
 		"keen-slider": "^6.8.6",
 		"next": "13.4.19",
 		"postcss": "8.4.29",
